chore: 초기 데이터 설정
- yml파일 설정 추가
- data.sql 파일에 초기 데이터 세팅

closes #5

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,14 @@ spring:
         show_sql: true
         format_sql: true
         default_batch_fetch_size: 100
+    defer-datasource-initialization: true
+
+  sql:
+    init:
+      data-locations:
+        - classpath:db/data.sql
+      mode: always
+      encoding: UTF-8
 
 logging:
   level:
