feat: 로그인 API 및 로직 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,8 @@ logging:
     root: info
     com.example.elevenstreet: debug
     org.hibernate.SQL: debug
+
+server:
+  servlet:
+    session:
+      tracking-modes: cookie
