--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### Profiles ###
+application-test.yml
+
 ### STS ###
 .apt_generated
 .classpath
