--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,13 @@ dependencies {
 
 	//test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	//test container
+	testImplementation "org.testcontainers:mysql:1.17.6"
+	testImplementation "org.testcontainers:testcontainers:1.17.6"
+	testImplementation "org.testcontainers:junit-jupiter:1.17.6"
 
 	//jwt
 	compileOnly 'io.jsonwebtoken:jjwt-api:0.11.5'
