--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+	ext {
+		springCloudVersion = '2021.0.3'
+	}
+}
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.8'
@@ -7,6 +13,12 @@ plugins {
 group = 'com.numble'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
 
 configurations {
 	compileOnly {
@@ -21,11 +33,8 @@ repositories {
 dependencies {
 	//web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-	//web flux 사용시 mac m1에서 생기는 에러같음
-	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
 
 	//database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -41,7 +50,7 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
 	//wire mock
-	testImplementation 'com.github.tomakehurst:wiremock-jre8:2.35.0'
+	testImplementation "org.springframework.cloud:spring-cloud-starter-contract-stub-runner"
 
 	//test container
 	testImplementation "org.testcontainers:mysql:1.17.6"
